<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="news">Berita</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="news_image">News Image</string>
    <string name="save">Simpan</string>
    <string name="prediction">Prediction</string>
    <string name="confidence">Confidence</string>
    <string name="history">Riwayat</string>
    <string name="history_prediction">Riwayat Prediksi</string>
    <string name="cancer">Cancer</string>
    <string name="non_cancer">Non Cancer</string>
</resources>