<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/result_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_place_holder"
            app:civ_border_color="#FF000000"
            android:layout_gravity="center"
            app:civ_border_width="2dp" 
            android:padding="16dp"
            />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/result" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="50dp" 
            android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/cancer"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:drawableTint="@color/purple_200"
            app:drawableLeftCompat="@drawable/baseline_circle_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/non_cancer"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/baseline_circle_24"
            app:drawableTint="@color/eton_blue" />
        </LinearLayout>
        
        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="1dp"/>
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/save"
            android:id="@+id/save_button"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:padding="16dp" 
            />
    </LinearLayout>
</ScrollView>